--- a/Mafia/Base.lproj/LaunchScreen.storyboard
+++ b/Mafia/Base.lproj/LaunchScreen.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13173"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -25,22 +24,21 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="W3Q-bf-IcX">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Title logo" translatesAutoresizingMaskIntoConstraints="NO" id="UpH-Ew-WgQ">
-                                <rect key="frame" x="67" y="137" width="240" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="white_logo" translatesAutoresizingMaskIntoConstraints="NO" id="whq-c1-MXK">
+                                <rect key="frame" x="86" y="258" width="202" height="151"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="240" id="L8G-NN-HUz"/>
-                                    <constraint firstAttribute="width" secondItem="UpH-Ew-WgQ" secondAttribute="height" multiplier="15:8" id="bWT-CI-C19"/>
-                                    <constraint firstAttribute="height" constant="128" id="s7n-EW-tVN"/>
+                                    <constraint firstAttribute="height" constant="151" id="gx0-Mt-mSD"/>
+                                    <constraint firstAttribute="width" constant="202" id="nv6-rl-Sm1"/>
                                 </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.96470588235294119" green="0.96470588235294119" blue="0.96470588235294119" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="UpH-Ew-WgQ" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="117" id="75I-Ph-4u9"/>
+                            <constraint firstItem="whq-c1-MXK" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="51p-2g-nsJ"/>
+                            <constraint firstItem="whq-c1-MXK" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="WV0-3e-XL6"/>
                             <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="W3Q-bf-IcX" secondAttribute="bottom" id="d5h-q5-KvB"/>
                             <constraint firstAttribute="trailing" secondItem="W3Q-bf-IcX" secondAttribute="trailing" id="dUv-RN-Nw4"/>
                             <constraint firstItem="W3Q-bf-IcX" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leading" id="eeH-4o-c4m"/>
-                            <constraint firstItem="UpH-Ew-WgQ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="fsx-lb-czO"/>
                             <constraint firstItem="W3Q-bf-IcX" firstAttribute="top" secondItem="Ze5-6b-2t3" secondAttribute="top" id="jSK-Tz-TXw"/>
                         </constraints>
                     </view>
@@ -51,7 +49,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Title logo" width="220" height="87"/>
         <image name="bg" width="960" height="1704"/>
+        <image name="white_logo" width="401" height="311"/>
     </resources>
 </document>
